Fixed problem with linebreaks in menu on small screens

--- a/css/bibsdb.styles.css
+++ b/css/bibsdb.styles.css
@@ -435,63 +435,20 @@ h6 {
   }
 }
 
-/* line 60, ../sass/framework/_bibsdb.navigation.scss */
-.main-menu-wrapper {
-  float: left;
-  width: 75%;
-  margin-left: 0%;
-  margin-right: -75%;
-  padding-left: 10px;
-  padding-right: 10px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  word-wrap: break-word;
-  *behavior: url("/profiles/ding2/themes/ddbasic/scripts/boxsizing.htc");
-  _display: inline;
-  _overflow: hidden;
-  _overflow-y: visible;
-}
-
-/* line 64, ../sass/framework/_bibsdb.navigation.scss */
-.secondary-menu-wrapper {
-  float: right;
-  width: 25%;
-  margin-right: 0%;
-  margin-left: -25%;
-  padding-left: 10px;
-  padding-right: 10px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  word-wrap: break-word;
-  *behavior: url("/profiles/ding2/themes/ddbasic/scripts/boxsizing.htc");
-  _display: inline;
-  _overflow: hidden;
-  _overflow-y: visible;
-}
-
-/* line 68, ../sass/framework/_bibsdb.navigation.scss */
-.main-menu {
-  font-size: 130%;
-}
-
-/* line 72, ../sass/framework/_bibsdb.navigation.scss */
+/* line 61, ../sass/framework/_bibsdb.navigation.scss */
 .secondary-menu {
   font-size: 110%;
 }
 
-/* line 77, ../sass/framework/_bibsdb.navigation.scss */
+/* line 67, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item, .secondary-menu .menu-item {
   color: white;
 }
-/* line 79, ../sass/framework/_bibsdb.navigation.scss */
+/* line 69, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item:hover, .secondary-menu .menu-item:hover {
   color: #7fc241;
 }
-/* line 82, ../sass/framework/_bibsdb.navigation.scss */
+/* line 72, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item.active, .secondary-menu .menu-item.active {
   color: #7fc241;
   font-family: "SourceSansProSemibold";
@@ -500,27 +457,27 @@ h6 {
 
 /* Sub menu
    ========================================================================== */
-/* line 91, ../sass/framework/_bibsdb.navigation.scss */
+/* line 82, ../sass/framework/_bibsdb.navigation.scss */
 h2.sub-menu-title {
   font-family: "SourceSansProSemibold";
   font-weight: normal;
 }
 
-/* line 95, ../sass/framework/_bibsdb.navigation.scss */
+/* line 86, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu {
   margin-bottom: 20px;
 }
-/* line 98, ../sass/framework/_bibsdb.navigation.scss */
+/* line 89, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu > li a {
   color: rgba(0, 0, 0, 0.7);
   padding-top: 5px;
   padding-bottom: 3px;
 }
-/* line 103, ../sass/framework/_bibsdb.navigation.scss */
+/* line 94, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu > li a:hover {
   color: rgba(0, 0, 0, 0.7);
 }
-/* line 110, ../sass/framework/_bibsdb.navigation.scss */
+/* line 101, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu li:before {
   color: rgba(0, 0, 0, 0.7);
   font-size: 100%;
